[package]
name = "web_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_ggrs = { version = "0.13", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
bevy_asset_loader = "0.17"